# danilo-portfolio-2025-session-arena

./: .dockerignore  .env.template  .gitignore  .tool-versions  Dockerfile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml
.github/workflows/: docker.yaml
alembic/: env.py
alembic/versions/: 73e2dbe255a2_create_feature_flags_table.py
app/: auth.py  celery_main.py  config.py  db.py  main.py  models.py  tasks.py
app/services/: feature_flags.py
app/static/: style.css
app/templates/: admin.html  index.html
